--- a/package.json
+++ b/package.json
@@ -26,7 +26,14 @@
     "rollback": "lerna run --scope=server rollback",
     "exp": "yarn --cwd packages/mobile exp",
     "exp-publish": "lerna run --scope=mobile exp-publish --stream",
+    "test": "echo DOING XOKAIDO || yarn tests && yarn lint",
+    "tests": "echo DOING LERNA XOKAIDO || lerna run --parallel tests --stream",
+    "tests:watch": "echo DOING TESTS WATCH XOKAIDO || lerna run --parallel tests:watch --stream",
+    "lint": "echo DOING LINT XOKAIDO || yarn eslint && yarn tslint",
+    "eslint": "eslint --fix --ext js --ext jsx --ext json .",
+    "tslint": "tslint --fix -p tsconfig.json -c tslint.json",
     "heroku-postbuild": "lerna run --parallel heroku-postbuild --stream",
+    "precommit": "lint-staged",
     "postinstall": "opencollective postinstall"
   },
   "lint-staged": {
