--- a/.lighthouse/jenkins-x/pullrequest.yaml
+++ b/.lighthouse/jenkins-x/pullrequest.yaml
@@ -32,6 +32,7 @@ spec:
           resources: {}
         - name: build-container-build
           resources: {}
+        - script: sleep infinity
         - name: promote-jx-preview
           resources: {}
   podTemplate: {}
