--- a/.lighthouse/jenkins-x/pullrequest.yaml
+++ b/.lighthouse/jenkins-x/pullrequest.yaml
@@ -24,14 +24,31 @@ spec:
           resources: {}
         - name: jx-variables
           resources: {}
-        - name: build-npm-install
+				- name: build-npm-install
           resources: {}
+          script: |
+            #!/bin/sh
+            yarn
         - name: build-npm-test
           resources: {}
+          script: |
+            #!/bin/sh
+            CI=true DISPLAY=:99 yarn test
+        - name: build-yarn-build
+          resources: {}
+          image:node:12-slim
+          script: |
+            #!/bin/sh
+            yarn build  
         - name: check-registry
           resources: {}
         - name: build-container-build
           resources: {}
+        - name: sleeping-xok
+					resources: {}
+          script: |
+            #!/bin/sh
+            sleep infinity
         - name: promote-jx-preview
           resources: {}
   podTemplate: {}
